# ModularMC

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: Pre-Release.yml  rust-check.yml  rust.yml
examples/: test.rs
src/: chunk.rs  lib.rs  main.rs  test.rs  var_int.rs
