[package]
name = "modularmc"
version = "0.1.0"
authors = ["I ran out of name ideas", "QPCrummer", "Jneos", "SuperMath101"]
description = "A modular Minecraft server where YOU get total control over the server"

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["codec"]}
bytes = "1.1.0"
futures = "0.3.17"
thiserror = "1.0.30"
num-traits = "0.2.14"
